Apply OpenRewrite cleanup